eks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "simple-bank.antimaterial.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simple-bank-service-api
            port:
              number: 80
  tls:
    - hosts:
      - simple-bank.antimaterial.net
      secretName: simple-bank-api-cert
